Исправление замечаний по ревью ТЗ. 7