@@ -1,12 +1,18 @@
 package manager;
 
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import tracker.exception.ManagerLoadException;
 import tracker.manager.FileBackedTaskManager;
+import tracker.tasks.Epic;
 import tracker.tasks.Status;
+import tracker.tasks.SubTask;
 import tracker.tasks.Task;
+
 import java.io.File;
 import java.io.IOException;
+
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -23,9 +29,7 @@ class FileBackedTaskManagerTest {
 
     @AfterEach
     void tearDown() {
-        taskManager.deleteAllTasks();
-        taskManager.deleteAllEpics();
-        taskManager.deleteAllSubtasks();
+        taskManager.deleteAll();
 
         if (testFile.exists()) {
             testFile.delete();
@@ -34,22 +38,41 @@ class FileBackedTaskManagerTest {
 
     @Test
     void testAddTask() {
-        Task task = new Task("Task_1", "Task_desc_1", Status.NEW);
+        Task task = new Task("Test addTask", "Test addTask description", Status.NEW);
         taskManager.addTask(task);
         assertEquals(1, taskManager.getTasks().size());
     }
 
     @Test
-    void testSaveAndLoad() throws IOException {
-        Task task = new Task("Task_1", "Task_desc_1", Status.NEW);
-
+    void SaveAndLoadTaskTest() throws IOException {
+        Task task = new Task("Test addTask", "Test addTask description", Status.NEW);
         taskManager.addTask(task);
-        taskManager.save();
 
         FileBackedTaskManager loadedManager = FileBackedTaskManager.loadFromFile(testFile);
-
         assertEquals(1, loadedManager.getTasks().size());
-        assertEquals("Task_1", loadedManager.getTasks().get(0).getName());
+        assertEquals(task, loadedManager.getTasks().getFirst());
+    }
+
+    @Test
+    void testSaveAndLoadEpic() {
+        Epic epic = new Epic(1, "Test addEpic", "Test addEpic description", Status.NEW);
+        taskManager.addEpic(epic);
+
+        FileBackedTaskManager loadedManager = FileBackedTaskManager.loadFromFile(testFile);
+        assertEquals(1, loadedManager.getEpics().size());
+        assertEquals(epic, loadedManager.getEpics().getFirst());
+    }
+
+    @Test
+    void testSaveAndLoadSubtask() {
+        Epic epic = new Epic(1, "Test addEpic", "Test addEpic description", Status.NEW);
+        taskManager.addEpic(epic);
+        SubTask subtask = new SubTask(2, "Test addSubtask", "Test addSubtask description", Status.NEW, epic.getId());
+        taskManager.addSubtask(subtask);
+
+        FileBackedTaskManager loadedManager = FileBackedTaskManager.loadFromFile(testFile);
+        assertEquals(1, loadedManager.getSubtasks().size());
+        assertEquals(subtask, loadedManager.getSubtasks().getFirst());
     }
 
     @Test
